code25_all/scala/11931623.txt
implicit case class IntOps(i: Int) extends AnyVal {
  def twice = i * 2
}

11.twice

<console>:13: error: value twice is not a member of Int
              11.twice
                 ^

